--- a/samples/industrial-data-simulator/manifests/oee/manifest.yml
+++ b/samples/industrial-data-simulator/manifests/oee/manifest.yml
@@ -12,7 +12,7 @@ data:
     logLevel: 1
     simulation:
       target:
-        host: localhost
+        host: aio-mq-dmqtt-frontend
         port: 1883
       sites:
         - name: RLine1_1
@@ -578,3 +578,16 @@ spec:
   type: ClusterIP
   selector:
     app: data-simulator
+---
+apiVersion: mq.iotoperations.azure.com/v1beta1
+kind: BrokerListener
+metadata:
+  name: industrial-data-simulator-listener
+  namespace: azure-iot-operations
+spec:
+  authenticationEnabled: false
+  authorizationEnabled: false
+  brokerRef: broker
+  port: 1883
+  serviceName: aio-mq-dmqtt-frontend
+  serviceType: clusterIp
