--- a/samples/auth-server-template/Cargo.toml
+++ b/samples/auth-server-template/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64 = "0.22"
 chrono = "0.4"
 clap = { version = "4", features = ["derive"] }
 futures = "0.3"
