updatge dapr service bus to consume from prebuild image
Signed-off-by: Ryan Winter <ryanwinter@outlook.com>

--- a/samples/dapr-service-bus/app.yaml
+++ b/samples/dapr-service-bus/app.yaml
@@ -95,4 +95,5 @@ spec:
             name: aio-ca-trust-bundle-test-only
       containers:
       - name: subscriber
-        image: dapr-service-bus:0.0.1
+        image: ghcr.io/azure-samples/explore-iot-operations/dapr-service-bus:0.0.1
+        imagePullPolicy: Always
