Fix Fabric endpoint

--- a/samples/quickstarts/datalake-connector.yaml
+++ b/samples/quickstarts/datalake-connector.yaml
@@ -14,7 +14,7 @@ spec:
   databaseFormat: delta
   target:
     fabricOneLake:
-      endpoint: https://msit-onelake.dfs.fabric.microsoft.com
+      endpoint: https://onelake.dfs.fabric.microsoft.com
       names:
         workspaceName: <your-workspace-name>
         lakehouseName: aiomqdestination
