update simulate data to remove nanoseconds which isnt supported by alpine
Signed-off-by: Ryan Winter <ryanwinter@outlook.com>

--- a/tutorials/mq-event-driven-dapr/simulate-data.yaml
+++ b/tutorials/mq-event-driven-dapr/simulate-data.yaml
@@ -49,7 +49,7 @@ spec:
           
           while true; do
             DATA="{
-                \"timestamp\": \"$(date -u +"%Y-%m-%dT%H:%M:%S.%3NZ")\",
+                \"timestamp\": \"$(date -u +'%Y-%m-%dT%H:%M:%SZ')\",
                 \"sensor_id\": \"Sensor-$(hostname)-$$\",
                 \"temperature\": $(awk -v min=550 -v max=600 'BEGIN{srand(); print min+rand()*(max-min)}'),
                 \"pressure\": $(awk -v min=290 -v max=300 'BEGIN{srand(); print min+rand()*(max-min)}'),
