Remove NFS special image, optimize env vars

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/universal:2-linux
+FROM mcr.microsoft.com/devcontainers/universal:linux
 
 # Install mosquitto client
 RUN apt-get update && apt-get install mosquitto-clients -y
