--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,14 +31,11 @@
     }
   },
   "containerEnv": {
-    "K3D_FIX_MOUNTS": "1"
+    "K3D_FIX_MOUNTS": "1",
+    "CLUSTER_NAME": "${localEnv:CODESPACE_NAME}"
   },
-  // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  // "forwardPorts": [],
-  // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "bash ./.devcontainer/postCreateCommand.sh"
-  // Use 'postStartCommand' to run commands after the container is created like starting minikube.
-  // "postStartCommand": "nohup bash -c 'minikube start &' > minikube.log 2>&1",
+  "onCreateCommand": "bash .devcontainer/onCreateCommand.sh",
+  "postStartCommand": ["echo", "-e", "Environment: \nSUBSCRIPTION_ID: $SUBSCRIPTION_ID \nRESOURCE_GROUP: $RESOURCE_GROUP \nLOCATION: $LOCATION \nCLUSTER_NAME: $CLUSTER_NAME"]
   // Configure tool-specific properties.
   // "customizations": {},
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
