--- a/samples/dapr-service-bus-dotnet/app.yaml
+++ b/samples/dapr-service-bus-dotnet/app.yaml
@@ -1,6 +1,72 @@
 # Copyright (c) Microsoft Corporation.
 # Licensed under the MIT License.
 
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: aio-mq-pubsub
+  namespace: azure-iot-operations
+  annotations:
+    dapr.io/component-container: >
+      {
+        "name": "aio-mq-components",
+        "image": "ghcr.io/azure/iot-mq-dapr-components:latest",
+        "volumeMounts": [
+          {
+            "name": "dapr-client-token",
+            "mountPath": "/var/run/secrets/tokens"
+          },
+          {
+            "name": "aio-ca-trust-bundle",
+            "mountPath": "/var/run/certs/aio-mq-ca-cert"
+          }
+        ]
+      }
+spec:
+  type: pubsub.aio-mq-pubsub-pluggable # DO NOT CHANGE
+  version: v1
+  metadata:
+  - name: url
+    value: "aio-mq-dmqtt-frontend:8883"
+  - name: satTokenPath
+    value: "/var/run/secrets/tokens/dapr-client-token"
+  - name: tlsEnabled
+    value: true
+  - name: caCertPath
+    value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
+---
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: aio-mq-statestore
+  namespace: azure-iot-operations
+spec:
+  type: state.aio-mq-statestore-pluggable # DO NOT CHANGE
+  version: v1
+  metadata:
+  - name: url
+    value: "aio-mq-dmqtt-frontend:8883"
+  - name: satTokenPath
+    value: "/var/run/secrets/tokens/dapr-client-token"
+  - name: tlsEnabled
+    value: true
+  - name: caCertPath
+    value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
+---
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: servicebus-binding
+  namespace: azure-iot-operations
+spec:
+  type: bindings.azure.servicebusqueues
+  version: v1
+  metadata:
+  - name: connectionString
+    value: "{connectionString}" # Insert your Service Bus connection string here
+  - name: queueName
+    value: "{queueName}"        # Insert the Service bus queue name here
+---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
