--- a/samples/dapr-service-bus/app.yaml
+++ b/samples/dapr-service-bus/app.yaml
@@ -13,7 +13,7 @@ metadata:
         "image": "ghcr.io/azure/iot-mq-dapr-components:latest",
         "volumeMounts": [
           {
-            "name": "mqtt-client-token",
+            "name": "dapr-client-token",
             "mountPath": "/var/run/secrets/tokens"
           },
           {
@@ -23,18 +23,17 @@ metadata:
         ]
       }
 spec:
-  type: pubsub.aio-mq-pubsub-pluggable
+  type: pubsub.aio-mq-pubsub-pluggable # DO NOT CHANGE
   version: v1
   metadata:
   - name: url
     value: "aio-mq-dmqtt-frontend:8883"
   - name: satTokenPath
-    value: "/var/run/secrets/tokens/mqtt-client-token"
+    value: "/var/run/secrets/tokens/dapr-client-token"
   - name: tlsEnabled
     value: true
   - name: caCertPath
     value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
-
 ---
 apiVersion: dapr.io/v1alpha1
 kind: Component
@@ -46,10 +45,9 @@ spec:
   version: v1
   metadata:
   - name: connectionString
-    value: "{connectionString}"
+    value: "{connectionString}" # Insert your Service Bus connection string here
   - name: queueName
-    value: "{queueName}"
-
+    value: "{queueName}"        # Insert the Service bus queue name here
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -58,7 +56,6 @@ metadata:
   namespace: azure-iot-operations
   annotations:
     aio-mq-broker-auth/group: dapr-workload
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -83,17 +80,17 @@ spec:
     spec:
       serviceAccountName: dapr-client
       volumes:
-        - name: mqtt-client-token
+        - name: dapr-client-token
           projected:
             sources:
               - serviceAccountToken:
-                  path: mqtt-client-token
+                  path: dapr-client-token
                   audience: aio-mq
                   expirationSeconds: 86400    
         - name: aio-ca-trust-bundle
           configMap:
             name: aio-ca-trust-bundle-test-only
       containers:
-      - name: subscriber
-        image: ghcr.io/azure-samples/explore-iot-operations/dapr-service-bus:0.0.1
-        imagePullPolicy: Always
+      - name: dapr-workload-service-bus
+        image: dapr-service-bus
+        imagePullPolicy: Never
