--- a/samples/dapr-service-bus-dotnet/app.yaml
+++ b/samples/dapr-service-bus-dotnet/app.yaml
@@ -38,6 +38,24 @@ spec:
 apiVersion: dapr.io/v1alpha1
 kind: Component
 metadata:
+  name: aio-mq-statestore
+  namespace: azure-iot-operations
+spec:
+  type: state.aio-mq-statestore-pluggable # DO NOT CHANGE
+  version: v1
+  metadata:
+  - name: url
+    value: "aio-mq-dmqtt-frontend:8883"
+  - name: satTokenPath
+    value: "/var/run/secrets/tokens/dapr-client-token"
+  - name: tlsEnabled
+    value: true
+  - name: caCertPath
+    value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
+---
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
   name: servicebus-binding
   namespace: azure-iot-operations
 spec:
@@ -60,23 +78,24 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dapr-workload-service-bus
+  name: dapr-workload-service-bus-dotnet
   namespace: azure-iot-operations
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dapr-workload-service-bus
+      app: dapr-workload-service-bus-dotnet
   template:
     metadata:
       labels:
-        app: dapr-workload-service-bus
+        app: dapr-workload-service-bus-dotnet
       annotations:
         dapr.io/enabled: "true"
         dapr.io/inject-pluggable-components: "true"
-        dapr.io/app-id: "dapr-workload-service-bus"
+        dapr.io/app-id: "dapr-workload-service-bus-dotnet"
         dapr.io/app-port: "6001"
         dapr.io/app-protocol: "http"
+        dapr.io/log-level: "debug"
     spec:
       serviceAccountName: dapr-client
       volumes:
@@ -91,6 +110,6 @@ spec:
           configMap:
             name: aio-ca-trust-bundle-test-only
       containers:
-      - name: dapr-workload-service-bus
-        image: dapr-service-bus
+      - name: dapr-workload-service-bus-dotnet
+        image: dapr-service-bus-dotnet
         imagePullPolicy: Never
