workflow is working
Signed-off-by: Ryan Winter <ryanwinter@outlook.com>

--- a/samples/dapr-workflow/dapr.yaml
+++ b/samples/dapr-workflow/dapr.yaml
@@ -6,10 +6,9 @@ common:
 apps:
   - appID: dapr-workflow-app
     appDirPath: .
+#    appProtocol: grpc
 #    appPort: 6001
-#    appProtocol: http
-    grpcPort: 50001
-    command: ["./src/dapr-workflow-app"]
+    command: ["./src/dapr-workflow"]
     appLogDestination: fileAndConsole
     daprdLogDestination: file
     
