ignore output binary, update to publish to a topic
Signed-off-by: Ryan Winter <ryanwinter@outlook.com>

--- a/samples/dapr-workflow/dapr.yaml
+++ b/samples/dapr-workflow/dapr.yaml
@@ -1,10 +1,8 @@
 version: 1
 common:
   resourcesPath: ./resources/
-  # environment:  # any environment variable shared among apps
-  #   - DEBUG: true
 apps:
-  - appID: dapr-workflow-app
+  - appID: daprworkflow
     appDirPath: ./src
     appProtocol: grpc
     appPort: 6001
