--- a/samples/dapr-workflow/resources/aiostatestore.yaml
+++ b/samples/dapr-workflow/resources/aiostatestore.yaml
@@ -6,7 +6,7 @@ spec:
   type: state.aio-mq-statestore-pluggable
   version: v1
   metadata:
-  - name: actorStateStore
-    value: true
   - name: url
     value: localhost:1883
+  - name: actorStateStore
+    value: false
