finalize workflow sample
Signed-off-by: Ryan Winter <ryanwinter@outlook.com>

--- a/samples/dapr-workflow/Dockerfile
+++ b/samples/dapr-workflow/Dockerfile
@@ -5,8 +5,8 @@ FROM golang:1.22-alpine AS builder
 
 WORKDIR /app
 
-# Copy dependencies
-COPY go.mod go.sum main.go ./
+# Copy src files into container
+COPY . ./
 
 # Download dependencies
 RUN go mod download
