--- a/samples/dapr-workflow/deploy.yaml
+++ b/samples/dapr-workflow/deploy.yaml
@@ -12,14 +12,8 @@ metadata:
         "name": "aio-mq-components",
         "image": "ghcr.io/azure/iot-mq-dapr-components:latest",
         "volumeMounts": [
-          {
-            "name": "mqtt-client-token",
-            "mountPath": "/var/run/secrets/tokens"
-          },
-          {
-            "name": "aio-ca-trust-bundle",
-            "mountPath": "/var/run/certs/aio-mq-ca-cert"
-          }
+          { "name": "mqtt-client-token", "mountPath": "/var/run/secrets/tokens" },
+          { "name": "aio-ca-trust-bundle", "mountPath": "/var/run/certs/aio-mq-ca-cert" }
         ]
       }
 spec:
@@ -27,11 +21,11 @@ spec:
   version: v1
   metadata:
   - name: url
-    value: "aio-mq-dmqtt-frontend:8883"
+    value: aio-mq-dmqtt-frontend
+  - name: port
+    value: 8883
   - name: satTokenPath
     value: "/var/run/secrets/tokens/mqtt-client-token"
-  - name: tlsEnabled
-    value: true
   - name: caCertPath
     value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
 ---
@@ -40,36 +34,18 @@ kind: Component
 metadata:
   name: aio-mq-statestore
   namespace: azure-iot-operations
-  annotations:
-    dapr.io/component-container: >
-      {
-        "name": "aio-mq-components",
-        "image": "ghcr.io/azure/iot-mq-dapr-components:latest",
-        "volumeMounts": [
-          {
-            "name": "mqtt-client-token",
-            "mountPath": "/var/run/secrets/tokens"
-          },
-          {
-            "name": "aio-ca-trust-bundle",
-            "mountPath": "/var/run/certs/aio-mq-ca-cert"
-          }
-        ]
-      }
 spec:
   type: state.aio-mq-statestore-pluggable # DO NOT CHANGE
   version: v1
   metadata:
   - name: url
-    value: "aio-mq-dmqtt-frontend:8883"
+    value: aio-mq-dmqtt-frontend
+  - name: port
+    value: 8883  
   - name: satTokenPath
     value: "/var/run/secrets/tokens/mqtt-client-token"
-  - name: tlsEnabled
-    value: true
   - name: caCertPath
     value: "/var/run/certs/aio-mq-ca-cert/ca.crt"
-  - name: actorStateStore
-    value: true
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -102,15 +78,15 @@ spec:
     spec:
       serviceAccountName: dapr-client
       volumes:
-        - name: dapr-client-token
-          projected:
-            sources:
-              - serviceAccountToken:
-                  path: dapr-client-token
-                  audience: aio-mq
-                  expirationSeconds: 86400    
-        - name: aio-ca-trust-bundle
-          configMap:
+      - name: mqtt-client-token
+        projected:
+          sources:
+            - serviceAccountToken:
+                path: mqtt-client-token
+                audience: aio-mq
+                expirationSeconds: 86400    
+      - name: aio-ca-trust-bundle
+        configMap:
             name: aio-ca-trust-bundle-test-only
       containers:
       - name: dapr-workload-sample
