--- a/tutorials/mq-event-driven-dapr/simulate-data.yaml
+++ b/tutorials/mq-event-driven-dapr/simulate-data.yaml
@@ -7,7 +7,7 @@ metadata:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mqtt-publisher-deployment
+  name: mqtt-publisher
   namespace: azure-iot-operations
 spec:
   replicas: 1
@@ -51,19 +51,23 @@ spec:
             DATA="{
                 \"timestamp\": \"$(date -u +'%Y-%m-%dT%H:%M:%SZ')\",
                 \"sensor_id\": \"Sensor-$(hostname)-$$\",
+                \"msg_number\": $MSG_COUNT,
                 \"temperature\": $(awk -v min=550 -v max=600 'BEGIN{srand(); print min+rand()*(max-min)}'),
                 \"pressure\": $(awk -v min=290 -v max=300 'BEGIN{srand(); print min+rand()*(max-min)}'),
                 \"vibration\": $(awk -v min=0.001 -v max=0.005 'BEGIN{srand(); print min+rand()*(max-min)}')
               }"
 
-            mosquitto_pub -i dapr-publisher -L mqtts://aio-mq-dmqtt-frontend/sensor/data -m "$DATA" -u \$sat -P $(cat /var/run/secrets/tokens/mqtt-client-token) --cafile /var/run/certs/aio-mq-ca-cert/ca.crt
+            mosquitto_pub -i mqtt-publisher -q 1 -L mqtts://aio-mq-dmqtt-frontend/sensor/data -m "$DATA" -u \$sat -P $(cat /var/run/secrets/tokens/mqtt-client-token) --cafile /var/run/certs/aio-mq-ca-cert/ca.crt
+            if [ $? -eq 0 ]; then
+              MSG_COUNT=$((MSG_COUNT+1))
+            else
+              echo "Publish failed for message number $MSG_COUNT, will retry"
+            fi
 
-            MSG_COUNT=$((MSG_COUNT+1))
             SECONDS=$((SECONDS+$SLEEP_DURATION))
             
             if [ $SECONDS -ge $REPORT_INTERVAL ]; then
-              echo "Messages published in the last $REPORT_INTERVAL seconds: $MSG_COUNT"
-              MSG_COUNT=0
+              echo "Published $MSG_COUNT messages"
               SECONDS=0
             fi
 
