--- a/tutorials/mq-event-driven-dapr/simulate-data.yaml
+++ b/tutorials/mq-event-driven-dapr/simulate-data.yaml
@@ -1,3 +1,5 @@
+# Copyright (c) Microsoft Corporation.
+# Licensed under the MIT License.
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -20,19 +22,6 @@ spec:
         app: mqtt-publisher
     spec:
       serviceAccountName: mqtt-publisher
-
-      volumes:
-      - name: mqtt-client-token
-        projected:
-          sources:
-          - serviceAccountToken:
-              path: mqtt-client-token
-              audience: aio-mq
-              expirationSeconds: 86400
-      - name: aio-ca-trust-bundle
-        configMap:
-          name: aio-ca-trust-bundle-test-only
-
       containers:
       - name: mqtt-publisher
         image: alpine
@@ -43,10 +32,10 @@ spec:
 
           SLEEP_DURATION=2
           REPORT_INTERVAL=10
-
           MSG_COUNT=0
           SECONDS=0
           
+          echo "Starting simulator"
           while true; do
             DATA="{
                 \"timestamp\": \"$(date -u +'%Y-%m-%dT%H:%M:%SZ')\",
@@ -57,7 +46,7 @@ spec:
                 \"vibration\": $(awk -v min=0.001 -v max=0.005 'BEGIN{srand(); print min+rand()*(max-min)}')
               }"
 
-            mosquitto_pub -i mqtt-publisher -q 1 -L mqtts://aio-mq-dmqtt-frontend/sensor/data -m "$DATA" -u \$sat -P $(cat /var/run/secrets/tokens/mqtt-client-token) --cafile /var/run/certs/aio-mq-ca-cert/ca.crt
+            mosquitto_pub -i mqtt-publisher -q 1 -L mqtt://aio-mq-dmqtt-frontend/sensor/data -m "$DATA"
             if [ $? -eq 0 ]; then
               MSG_COUNT=$((MSG_COUNT+1))
             else
@@ -73,9 +62,4 @@ spec:
 
             sleep $SLEEP_DURATION
           done
-        volumeMounts:
-        - name: mqtt-client-token
-          mountPath: /var/run/secrets/tokens
-        - name: aio-ca-trust-bundle
-          mountPath: /var/run/certs/aio-mq-ca-cert
  
